# App-Icon-Maker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release-tauri.yml
.pi-lens/: metrics-history.json  turn-state.json
.pi-lens/cache/: javascript-rules-v1.json  knip.json  knip.meta.json  review-graph.json  tsx-rules-v1.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json  typescript-rules-v1.json
docs/superpowers/plans/: 2025-05-18-monorepo-web-migration.md
raycast-extension/: package-lock.json  package.json
raycast-extension/src/: api.ts  config.ts  detail-view.tsx  generate-icon.tsx  refine-form.tsx  results.tsx  utils.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.pi-lens/: turn-state.json
src-tauri/.pi-lens/cache/: review-graph.json  rust-rules-v1.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: app-content.tsx  blueprint-face.tsx  error-modal.tsx  icon-face.tsx  icon-stack.tsx  macos-icon.tsx  openai-api-key-modals.tsx  prompt-input.tsx  save-success-modal.tsx  single-refine-icon.tsx  squircle-clip-defs.tsx  theme-provider.tsx  title-bar-status.tsx  variant-picker.tsx
src/components/ui/: select.tsx
src/lib/: icon-pipeline.ts  squircle.ts  tauri-transport.ts
web/: astro.config.mjs  package.json  wrangler.toml
web/scripts/: build-tailwind.mjs
web/src/pages/: index.astro
(+9 files in other folders)
