[package]
name = "app-icon-maker"
version = "0.1.0"
description = "macOS App Icon Generator - AI-powered icon creation"
authors = ["you"]
edition = "2021"

[lib]
name = "app_icon_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "6"
tauri-plugin-store = "2"
